Fixed mess with images and added no-task-data comment

--- a/images_src/preheader.tex
+++ b/images_src/preheader.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{amsart}
 \usepackage{anysize,amssymb,amsthm,verbatim,epsfig,graphics,longtable}
 \usepackage[unicode]{hyperref}
-
+\usepackage{pstricks,auto-pst-pdf}
 \endinput
