--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,8 +1,9 @@
 \documentclass[12pt]{amsart}
 \renewcommand{\tablename}{qq}
-\usepackage{anysize,amssymb,verbatim,epsfig,graphics,array,slashbox,rotating,amsmath,multicol,multirow}
+\usepackage{anysize,amssymb,verbatim,epsfig,graphics,array,slashbox,rotating,amsmath,multicol,multirow,grffile}
 \usepackage{hhline}
 \usepackage[unicode]{hyperref}
+\usepackage{graphicx}
 \input{cs}
 
 \begin{document}
